# LarkMemory

./: .gitignore  AGENTS.md  README.md  cli_dummy.py  demo_seed.py  larkmemory.env.example  pyproject.toml  requirements.txt
.tmp-demo/: cli_dummy.py  larkmemory-cli-a-demo.db
.tmp-tests/event-store-2473181acdd04889914273490934afe1/: test.db
.tmp-tests/event-store-3db693fac13e4c71b0ea23c073e5912e/: test.db
.tmp-tests/event-store-3dfb6e9c0d1344fa8bd6f771fe81cc3b/: test.db
.tmp-tests/event-store-96d0f9c99ccc43988686f61ea1b2a1db/: test.db
.tmp-tests/event-store-ab8a42e2cef24c4f84c6c01f106066b5/: test.db
.tmp-tests/event-store-ce56b05312744d488a69f50d175fe076/: test.db
.tmp-tests/event-store-dc43ccaa5956459fa35eda0cbe1f47d3/: test.db
benchmark/: README.md  run_project_decision_benchmark.py  schema.json
docs/: AGENT_MEMORY_ANALYSIS.md  ARCHITECTURE_REPORT.md  DEVELOPMENT PLAN.md  DIRECTION_C_D_PLAN.md  Memory Structure and Storage.md  Scenario Analysis.md  api方法说明.md  app方法说明.md  cli_workflow_business_requirements.md  core方法说明.md  feishu-event.md  feishu-integration-usage.md  retrieval方法说明.md  team_retention_llm_prompt.md  utils方法说明.md
memory-bank/: architecture.md  implementation-plan.md  prd.md  progress.md  tech-stack.md
plugin/: index.ts  openclaw.plugin.json  package.json  text_extraction.mjs  text_extraction.test.mjs
scripts/: demo_direction_a_env.sh  demo_direction_a_prepare_hook.sh  demo_direction_a_server.sh  demo_direction_a_shell.sh  diagnose_cli_retrieve_chain.py  setup_larkmemory_bash.sh
src/api/: benchmark.py  (+7 more)
tests/: test_websocket.py
(+267 files in other folders)
